plan(98): document jlink-union packaging design in Task 9 narrative
The shared-image-must-grow finding, module-list derivation (jdeps-on-uber-jar +
reflective additions, boot-pruned), and the cli-agnostic / packaging-owns-the-union
composition were only in task XML comments and build-file comments. Per Core
Invariant #4 (git plan file is the source of truth for plan content, not task
tracking), fold them into the Task 9 narrative and correct the misleading "NOT
embedded in the jlink module path" wording — the fast-jar JARS stay off the module
path, but the shared image's JDK MODULE SET grows to run Quarkus.

Prose-only: no task headings, dependencies, count, or order changed, so the task
XML is unaffected (no regen — preserves Task 9's de-risk audit trail).